<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/centerByVerticalGuideline"
            app:layout_constraintEnd_toStartOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toTopOf="@+id/topByVerticalGuideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/interestingFactsAboutNumbersTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interesting_facts_about_numbers"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/numberLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/number"
                    app:layout_constraintBottom_toTopOf="@+id/getFactButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getFactButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/black"
                    android:text="@string/get_fact"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/getFactAboutRandomNumberButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getFactAboutRandomNumberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/get_fact_about_random_number"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/historyOfUserRequestsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history_of_user_requests"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toTopOf="@+id/centerByVerticalGuideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomByVerticalGuideline"
            app:layout_constraintEnd_toStartOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/historyOfUserRequestsTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topByVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerByVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomByVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>